--- a/src/components/testimonials/Testimonial.css
+++ b/src/components/testimonials/Testimonial.css
@@ -1,117 +1,110 @@
-.testimonials{
-    margin: 80px auto;
-    padding: 0 80px;
-    position: relative;
+.testimonials {
+  margin: 80px auto;
+  padding: 0 80px;
+  position: relative;
 }
-.next-btn, .back-btn{
-    position: absolute;
-    top: 50%;
-    right: 0;
-    transform: translateY(-50%);
-    background: #0e204f;
-    color: #fff;
-    border: none;
-    padding: 15px;
-    width: 50px;
-    border-radius: 50%;
-    cursor: pointer;
+.next-btn,
+.back-btn {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  transform: translateY(-50%);
+  background: #0e204f;
+  color: #fff;
+  border: none;
+  padding: 15px;
+  width: 50px;
+  border-radius: 50%;
+  cursor: pointer;
 }
-.back-btn{
-    right: auto;
-    left: 0;
+.back-btn {
+  right: auto;
+  left: 0;
 }
-.slider{
-    overflow: hidden;
+.slider {
+  overflow: hidden;
 }
-.slider ul{
-    display: flex;
-    width: 200%;
-    overflow-x: hidden;
-    transition: 0.5s;
+.slider ul {
+  display: flex;
+  width: 200%;
+  overflow-x: hidden;
+  transition: 0.5s;
 }
-.slider ul li{
-    list-style: none;
-    width: 50%;
-    padding: 20px;
+.slider ul li {
+  list-style: none;
+  width: 50%;
+  padding: 20px;
+}
+.slide {
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
+  padding: 40px;
+  border-radius: 10px;
+  color: #676767;
+  line-height: 1.4;
+}
+.slide img {
+  width: 65px;
+  border-radius: 50%;
+  margin-right: 10px;
+  border: 4px solid#0e204f;
+}
 
-}
-.slide{
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
-    padding: 40px;
-    border-radius: 10px;
-    color: #676767;
-    line-height: 1.4
-}
-.slide img{
-    width: 65px;
-    border-radius: 50%;
-    margin-right: 10px;
-    border:4px solid#0e204f;
-
-}
-
-.user-info{
-    display: flex;
-   align-items: center;
- margin-bottom: 20px;
-   font-size: 15px;
-
+.user-info {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+  font-size: 15px;
 }
 .user-info h3 {
-    color: #0e204f;
+  color: #0e204f;
 }
 
-@media  {
-    .testimonials{
-
+@media (max-width: 850px) {
+  .testimonials {
     padding: 0 40px;
-}
-.next-btn, .back-btn{
+  }
+  .next-btn,
+  .back-btn {
     padding: 10px;
     width: 35px;
-}
-.back-btn{
+  }
+  .back-btn {
     right: auto;
     left: 0;
-}
-.slider{
+  }
+  .slider {
     overflow: hidden;
-}
-.slider ul{
+  }
+  .slider ul {
     display: flex;
     width: 200%;
     overflow-x: hidden;
     transition: 0.5s;
-}
-.slider ul li{
+  }
+  .slider ul li {
     list-style: none;
     width: 50%;
     padding: 20px;
-
-}
-.slide{
+  }
+  .slide {
     padding: 10px;
- 
-}
-.slide img{
+  }
+  .slide img {
     width: 50px;
-    border:3px solid#0e204f;
+    border: 3px solid#0e204f;
+  }
+}
 
-}
-}
-
-@media (max-width:600px) {
-    
-.user-info{
-    display:block ;
- margin-bottom: 10px;
-   font-size: 12px;
-
-}
-.user-info h3 {
-    font-size: 14px;
-}
-.slide p{
+@media (max-width: 600px) {
+  .user-info {
+    display: block;
+    margin-bottom: 10px;
     font-size: 12px;
-}
+  }
+  .user-info h3 {
+    font-size: 14px;
+  }
+  .slide p {
+    font-size: 12px;
+  }
 }
