--- a/src/components/title/Title.css
+++ b/src/components/title/Title.css
@@ -1,6 +1,6 @@
 .title {
-  font-size: 15px;
-  font-weight: 700px;
+  font-size: 16px;
+  font-weight: 700;
   text-align: center;
   margin: 70px 0 30px;
   text-transform: uppercase;
