--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,7 @@
 }
 
 body {
-  background: rgba(0, 0, 0, 1); /* semi-transparent black */
-  backdrop-filter: blur(14px);
+  background: #fff;
 }
 
 a {
